<resources>
    <string name="app_name">MovieBuddy</string>
    <string name="maps_api_key">AIzaSyAnIrJX8WMNRzHTwEVAcFIdl8pW2Wn_dRc</string>
    <string name="moviedb_api_key">e3933d5b5c409463ee2c85a307c0df96</string>
    <string name="youtube_api_key">AIzaSyAVN3pg7U4fEbSYPm_TKqHOypNUhTgK7bo</string>
    <string name="movie_name">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="sort_key">Sort Key</string>
    <string name="sort_popular">Most Popular</string>
    <string name="sort_rating">Highest Rated</string>
    <string name="badboystitle">Bad Boys For Lifes Home Release Will Have An Alternate Ending And Tons Of Bonus Content</string>
    <string name="badboysnews">The COVID-19 pandemic has disrupted the film industry, particularly when it comes to movies that were supposed to be hitting theaters soon. Fortunately for Bad Boys for Life, it managed to enjoy a solid theatrical run ahead of this coronavirus craziness, and with that time on the big screen done, the movie is heading to home media soon, with an alternate ending being among the provided special features. \n \n Starting March 31, you’ll be able to buy Bad Boys for Life on Digital, and if you’d rather watch Will Smith and Martin Lawrence’s on Blu-ray, DVD or 4K Ultra HD, those physical copies will arrive on April 21. The Digital, Blu-ray and 4K Ultra HD versions of Bad Boys for Life come packed with over 50 minutes of special features, while the DVD version will have a handful of extras to enjoy. \n \n Given the need to keep spoilers quiet, no details about Bad Boys for Life’s alternate ending were provided. Considering how explosive the movie’s theatrical ending was, it’ll be interesting to see how things differ in this version. Did any characters who died in the finalized ending make it out alive instead, or vice versa? Or did the action beats just unfold differently in the journey to ultimately reach the same conclusion? We shall see. \n \n cOther special features Bad Boys for Life will be providing in theDigital, Blu-ray and 4K Ultra HD include extended and alternate scenes and an easter egg tour guided by directors Adil El Arbi and Bilall Fallah, as well as the following featurettes: Ride or Die: Making Bad Boys for Life, Partners in Crime: Behind-the-Scenes, and It’s About Time, the latter of which delves into 25 years of Bad Boys history producer Jerry Bruckeheimer and the cast and crew. \n \n Coming out 17 years after Bad Boys II, Bad Boys for Life saw the return of Will Smith’s Mike Lowery and Martin Lawrence’s Marcus Burnett, with the duo investigating a string of murders tied to Mike’s past. Bad Boys for Life also brought back Theresa Randle’s Theresa Burnett and Joe Pantoliano’s Captain Conrad Howard, while the new cast members included Vanessa Hudgens, Alexander Ludwig, Charles Melton, Paola Núñez and Jacob Scipio, among many others. While Michael Bay, the director of the first two Bad Boys movies, was interesting in directing a third Bad Boys movie early into its development process, by 2018, Adil El Arbi and Bilall Fallah were brought aboard to helm the threequel (though Bay did still contribute in a fun way). Chris Bremner, Peter Craig and Joe Carnahan wrote the Bad Boys for Life screenplay. \n \n Critically speaking, Bad Boys for Life earned a lot of positive reviews and ranks at 77% among critics on Rotten Tomatoes, making it the highest-ranked Bad Boys movie on that website. Commercially, the threequel pulled in nearly $420 million worldwide off a $90 million budget, and as of this writing, it’s still the highest-grossing movie of 2020.</string>
    <string name="blackwidowtitle">In Inevitable News: Marvel Finally Delays Black Widow</string>
    <string name="blackwidownews">The past weeks news cycle has been dizzying, as the global COVID-19 pandemic changes daily life around the world. The ongoing situation has also sent shock waves through the entertainment world, as sets are shut down and movies are delayed. As large groups began dwindling around the world, movies like No Time to Die and F9: The Fast Saga were postponed seven months and a full year respectively. And as the situation continues unfolding, Marvel Studios has followed suit and pulled the release of Cate Shortlands Black Widow. \n \n This news comes to us from Variety, and is sure to be a bummer for the rabid Marvel fanbase. Black Widow was set to kick off Phase Four of the Marvel Cinematic Universe, while also providing closure with Scarlett Johanssons title character. Originally set to arrive on May 1st, Marvel and Disney have officially pulled the highly anticipated blockbuster. Whats more, theres no telling when it might actually hit theaters. \n \n The marketing campaign for Black Widow has been going full title for a few months now. The movies trailers were methodically released, and ads about Natasha Romanoffs long awaited solo flick are all over the internet and TV. And between the title characters fate in Avengers: Endgame and the killer cast Cate Shortland assembled, Black Widow really had momentum behind it before being pulled. \n \n While Scarlett Johansson was originally unsure about wanting to do Black Widow, the movies story ultimately inspired her to suit up one more time as the OG Avenger. Rather than being an origin story or traditional prequel, the delayed movie will be set in between the events of Captain America: Civil War and Avengers: Infinity War. Natasha should once again be a fugitive, and will be reunited with her original family, played by the likes of David Harbour, Florence Pugh, and Rachel Weisz. \n \n The trailers also reveled that Black Widow should contain flashbacks, and expand the title characters dark and sordid history. Natashas dark past has been alluded to a number of times throughout the MCU, but details have been limited. And now that the movie has been delayed, fans will have to wait even longer to get those answers theyve been hoping for. With so many movies being pushed back by various studios, 2021 is shaping up to be a wild one at the theaters. \n \n There were a number of huge blockbusters set to arrive next year before COVID-19 threw a wrench into plans for the entire industry. So will more be added for competition, or will we end up waiting years for certain releases? As far as Marvel goes, I am eager to see how the shared universe ultimately lands on a plan of action. Black Widow was supposed to start Phase Four, but could it end up being the second or third movie instead? Or will the studio simply shift all of its movies over one date to allow the original plan of release? The possibilities are endless, and only time will tell how the film industry recovers and moves on following the last week.</string>
    <string name="ghostbusterstitle">Ghostbusters: Afterlifes Finn Wolfhard Promises Faithful Continuation From The Original</string>
    <string name="ghostbustersnews">The original Ghostbusters had their adventures in the 80s but, now, a new team of heroes will rise to deal with paranormal activity in Ghostbusters: Afterlife. The highly anticipated sequel is set to expand on the universe established by the original two films, which has some veteran fans worried about just how closely Afterlife matches it predecessors. Well, never fear, because Afterlife star Finn Wolfhard thinks those fans will be pleasantly surprised. \n \n Wolfhard tells NME that fans shouldn’t worry because Ghostbusters: Afterlife will faithfully build on the classic films. In addition, he also believes the movie will appeal to younger fans by employing some key themes: "Older Ghostbusters fans will find it’s a really, really faithful approach to the series. While young people, if not everyone, will find that, first and foremost, Ghostbusters is about family and the relationships that these people have made. It’s also really funny, so I’m really excited for people to see it." \n \n From the moment fans got their first glimpse at the Ghostbusters: Afterlife trailer, it was more than evident that it’s leaning into nostalgic aspects of the franchise. That humor and sense of family that Finn Wolfhard mentions are also present. These are elements that are far from unfamiliar to the young actor, as the TV show he stars in – Stranger Things – employs these very themes. In terms of Afterlife, the idea of family is especially important since the film focuses on an actual family. \n \n Ghostbusters: Afterlife centers on a single mother who, with her two kids, moves to a farm in Oklahoma she inherited from the father she never knew. As time goes on, her children discover a connection between their family and the original Ghostbusters, which also illuminates the identity of their late grandfather. \n \n Many have already speculated that the grandfather in question will be Ghostbuster Egon Spengler, who was portrayed by the late Harold Ramis. Although details are scarce on how he’ll play into the film, Egon’s fate will indeed be addressed. Ramis’ absence will make the viewing experience somewhat bittersweet, but at least fans can still look forward to seeing the returning Bill Murray, Dan Aykroyd, Ernie Hudson, Sigourney Weaver and Annie Potts.</string>
    <string name="pottertitle">J.K. Rowling Doing The Dang Thing And Making Harry Potter Available During COVID-19 Crisis</string>
    <string name="quietplacetitle">John Krasinski Explains Why A Quiet Place Part II Is Actually Scarier This Time Around</string>
    <string name="sonictitle">Ben Schwartz Has An On Brand Response To Sonic The Hedgehog Hitting Digital Early</string>
    <string name="spidermantitle">New Spider-Man 3 Rumor Includes One Of Netflix’s Marvel Heroes</string>
    <string name="starwarstitle">Star Wars Explained Exactly How Palpatine Survived His Return Of The Jedi Fall</string>
    <string name="topguntitle">Tom Cruise Had One Big Request For Top Gun: Maverick</string>
    <string name="venomtitle">No Big Deal, Just Tom Hardy And Woody Harrelson On The Venom 2 Set Before San Francisco Shutdown</string>
</resources>