<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.uuj.moviebuddy.RecActivity">


    <RelativeLayout
        android:id="@+id/toplayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="News"
            android:textAlignment="center"
            android:textSize="30sp"    />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/newslayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toplayout1"
        android:layout_above="@id/bottomlayout1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/movienews1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/quietplaceimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/quietplace"/>

                <TextView
                    android:id="@+id/quietplacetitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/quietplacetitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews1"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/badboysimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/badboys"/>

                <TextView
                    android:id="@+id/badboystitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/badboystitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews2"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/blackwidowimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/blackwidow"/>

                <TextView
                    android:id="@+id/blackwidowtitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/blackwidowtitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews3"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/ghostbustersimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/ghostbusters"/>

                <TextView
                    android:id="@+id/ghostbusterstitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/ghostbusterstitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews4"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/potterimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/potter"/>

                <TextView
                    android:id="@+id/pottertitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/pottertitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews5"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/sonicimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/sonic"/>

                <TextView
                    android:id="@+id/sonictitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/sonictitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews6"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/spidermanimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/spiderman"/>

                <TextView
                    android:id="@+id/spidermantitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/spidermantitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews7"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/starwarsimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/starwars"/>

                <TextView
                    android:id="@+id/starwarstitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/starwarstitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews9"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews8"
                android:background="@drawable/border">

                <ImageView
                    android:id="@+id/topgunimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/topgun"/>

                <TextView
                    android:id="@+id/topguntitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/topguntitle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/movienews10"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/movienews9">

                <ImageView
                    android:id="@+id/venomimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:src="@drawable/venom"/>

                <TextView
                    android:id="@+id/venomtitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/venomtitle"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottomlayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bottomNavView"
            android:background="@drawable/toolbar_border"
            app:menu="@menu/bottom_navigation_menu">

        </android.support.design.widget.BottomNavigationView>

    </RelativeLayout>

</RelativeLayout>