<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.uuj.moviebuddy.DetailActivity"
    tools:showIn="@layout/activity_moviedetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movietitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/movie_name"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/movtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/movietitle"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/synopsis"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_below="@id/movtitle"/>

            <TextView
                android:id="@+id/plotsynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/synopsis"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/plotsynopsis"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/movierating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/rating"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/rating"
                android:text="@string/release_date"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/releasedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/release"
                android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>